--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.associations": {
         "circularbuffer.h": "c",
-        "new": "cpp"
+        "new": "cpp",
+        "adc.h": "c"
     },
     "C_Cpp.intelliSenseEngineFallback": "disabled"
 }
